--- a/package.json
+++ b/package.json
@@ -18,10 +18,17 @@
   },
   "dependencies": {
     "@tailwindcss/forms": "^0.5.3",
+    "formik": "^2.4.4",
+    "framer-motion": "^10.16.4",
+    "lucide-react": "^0.274.0",
     "next": "13.4.19",
+    "next-intl": "3.0.0-beta.16",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "tailwindcss": "3.3.3"
+    "tailwind-merge": "^1.14.0",
+    "tailwindcss": "3.3.3",
+    "yup": "^1.2.0",
+    "yup-phone-lite": "^2.0.1"
   },
   "devDependencies": {
     "@commitlint/cli": "^17.6.6",
@@ -43,7 +50,7 @@
     "husky": "^8.0.3",
     "lint-staged": "^14.0.0",
     "postcss": "8.4.28",
-    "prettier": "^3.0.0",
+    "prettier": "^3.0.3",
     "prettier-plugin-tailwindcss": "^0.5.0",
     "pretty-quick": "^3.1.3",
     "typescript": "5.1.6"
