--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.15",
+    "cosmiconfig-typescript-loader": "^5.0.0",
     "cross-env": "^7.0.3",
     "cz-conventional-changelog": "^3.3.0",
     "eslint": "8.47.0",
