--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "lucide-react": "^0.274.0",
     "next": "13.4.19",
     "next-intl": "3.0.0-beta.16",
+    "nodemailer": "^6.9.5",
+    "nodemailer-smtp-transport": "^2.7.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tailwind-merge": "^1.14.0",
@@ -36,6 +38,8 @@
     "@commitlint/format": "^17.4.4",
     "@favware/cliff-jumper": "^2.1.1",
     "@types/node": "20.5.4",
+    "@types/nodemailer": "^6.4.9",
+    "@types/nodemailer-smtp-transport": "^2.7.5",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.15",
